<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">开源中国AndroidDesign版</string>
    
    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">用户注销</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">开源软件</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_sweep">扫一扫</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>
    
    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_lastest">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_software_china">国产软件</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    
    <string name="login_dialog_logo">开源中国</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    
    <string name="news_detail_head_title">新闻正文</string>
    <string name="news_detail_lable_pub">发布于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="question_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">博客正文</string>
    <string name="software_detail_head_title">软件详情</string>
    <string name="tweet_detail_head_title">动弹详情</string>
    <string name="tweet_pub_head_title">动弹一下</string>
    <string name="tweet_chatfooter_cancel_rcd">手指上滑，取消发送</string>
    <string name="tweet_chatfooter_cancel_rcd_release">松开手指，取消发送</string>
    <string name="tweet_chatfooter_too_short">录音时间太短</string>
    <string name="message_detail_head_title">我和%s的对话</string>
    <string name="user_center_head_title">用户空间</string>
    
    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">关注(%d)</string>
    <string name="user_friend_fans">粉丝(%d)</string>
    
    <string name="comment_list_head_title">网友评论</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>  
    
    <string name="setting_head_title">系统设置</string>
    <string name="capture_head_title">扫一扫</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    
    <string name="new_fragment_search_title">搜索</string>
    <string name="question_fragment_put_title">发帖</string>
    <string name="questionpub_activity_put_title">发送</string>
    <string name="question_detail_menu_report">举报</string>
    <string name="question_detail_menu_share">分享</string>
    <string name="comment_pub_forward">转发到个人空间</string>
    <string name="commentpub_activity_put_title">回复</string>
    <string name="login">登陆</string>
    <string name="fragment_dialog_user_longin">用户登录</string>
    <string name="fragment_dialog_positive">确定</string>
    <string name="fragment_dialog_negative">取消</string>
    <string name="message_pub_title">发送留言</string>
    <string name="actionbar_pub_title">发送</string>
    <string name="message_forword_title">转发留言</string>
    <string name="usercenter_userinfo_title">用户信息</string>
    <string name="signin_positive">确认签到</string>
    <string name="signin_title">活动签到</string>
    <string name="main_menu_open">开源软件</string>
    <string name="main_menu_capture">扫一扫</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_layout_hint">欢迎您提出宝贵的意见和建议</string>
    <string name="feedback_edittext_hint">输入您的意见和建议</string>
    <string name="feedback_publish">提交反馈</string>
    <string name="report_title">我要举报</string>
    <string name="screen_shot_share_title">截图分享</string>
    <string name="search_title">搜索</string>
    <string name="search_title_software">软件</string>
    <string name="search_title_question">问答</string>
    <string name="search_title_blog">博客</string>
    <string name="search_title_new">新闻</string>
    <string name="search_title_code">代码</string>
    <string name="software_lib_title">开源软件库</string>
    <string name="software_lib_title_catalog">分类</string>
    <string name="software_lib_title_recommend">推荐</string>
    <string name="software_lib_title_lastest">最新</string>
    <string name="software_lib_title_hot">热门</string>
    <string name="software_lib_title_china">国产</string>
    <string name="software_lib_weekly">每周推荐软件</string>
    <string name="software_lib_lastestsoft">最新软件列表</string>
    <string name="software_lib_hotsoft">热门软件列表</string>
    <string name="user_favorite_title">我的收藏夹</string>
    <string name="userinfo_title">用户信息</string>
    <string name="main_menu_userinfo">用户资料</string>
    <string name="mian_footer_news">资讯</string>
    <string name="main_footer_question">问答</string>
    <string name="main_footer_tweet">动弹</string>
    <string name="main_footer_user">用户</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_share">分享</string>
    <string name="news_detail_iscollection">正在执行中..</string>
    <string name="question_pub_edittext_hint">输入提问内容</string>
    <string name="question_pub_checkbox_text">有人回答时邮件通知我</string>
    <string name="question_pub_describe">请对问题进行详细描述：</string>
    <string name="question_pub_classify">分类：</string>
    <string name="question_pub_title_hint">输入标题</string>
    <string name="question_pub_title">标题：</string>
    <string name="detail__pub_contentdescription">发送</string>
    <string name="about_text">本应用由开源中国Android客户端的开源代码基础上修改而来，本应用源代码获取请点击链接</string>
    
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="main_footer_software">软件</string>
</resources>
