<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item 
        android:id="@+id/main_menu_login" 
        android:title="@string/main_menu_login"
        app:showAsAction="never" />
    <item 
        android:id="@+id/main_menu_user" 
        android:title="@string/main_menu_userinfo"
        android:icon="@drawable/ic_action_user"
        app:showAsAction="ifRoom|withText" />
    <item 
        android:id="@+id/main_menu_open" 
        android:title="@string/main_menu_open"
        app:showAsAction="never" />
    <item 
        android:id="@+id/main_menu_capture" 
        android:title="@string/main_menu_capture"
        app:showAsAction="never" />
    <item 
        android:id="@+id/main_menu_setting" 
        android:title="@string/main_menu_setting"
        app:showAsAction="never" />
    <item 
        android:id="@+id/main_menu_about" 
        android:title="@string/main_menu_about"
        app:showAsAction="never" />
</menu>
