<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item 
        android:id="@+id/question_detail_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="always|always"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_action_nofavorite" />
    
    <item 
        android:id="@+id/question_detail_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="ifRoom|withText"
        android:title="@string/question_detail_menu_share"
        android:icon="@drawable/ic_action_share" />
    
    <item 
        android:id="@+id/question_detail_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="never"
        android:title="@string/question_detail_menu_report" />

</menu>
