<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_pub_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/question_pub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/question_pub_title_hint"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/question_pub_classify"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/question_pub_catalog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/post_pub_options" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dip"
                android:text="@string/question_pub_describe"
                android:textColor="@color/author_text" />

            <EditText
                android:id="@+id/question_pub_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoLink="web"
                android:background="@drawable/edittext_selector"
                android:gravity="top"
                android:hint="@string/question_pub_edittext_hint"
                android:lines="5" />

            <CheckBox
                android:id="@+id/question_pub_email"
                android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:layout_gravity="left|center"
                android:layout_marginLeft="3.0dip"
                android:text="@string/question_pub_checkbox_text"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>