<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginTop="10.0dip"
        android:hint="@string/login_dialog_account_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:hint="@string/login_dialog_password_hint"
        android:maxLines="1"
        android:password="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="@dimen/text_size_16" />

    <CheckBox
        android:id="@+id/login_checkbox_rememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/login_dialog_rememberMe"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_13" />

</LinearLayout>